--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectMorning",
+  "name": "projectmorning",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/AnthonyC93/projectMorning/issues"
   },
-  "homepage": "https://github.com/AnthonyC93/projectMorning#readme"
+  "homepage": "https://github.com/AnthonyC93/projectMorning#readme",
+  "dependencies": {
+    "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "mysql": "^2.16.0"
+  }
 }
