--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
   },
   "homepage": "https://github.com/AnthonyC93/projectMorning#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mysql": "^2.16.0"
-  }
+    "handlebars": "^4.0.12",
+    "mysql": "^2.16.0",
+    "path": "^0.12.7",
+    "require": "^2.4.20"
+  },
+  "devDependencies": {}
 }
