--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "handlebars": "^4.0.12",
     "mysql": "^2.16.0",
     "path": "^0.12.7",
-    "require": "^2.4.20"
+    "require": "^2.4.20",
+    "util": "^0.11.1"
   },
   "devDependencies": {}
 }
