--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.12",
     "mysql": "^2.16.0",
+    "newsapi": "^2.4.0",
     "path": "^0.12.7",
     "require": "^2.4.20"
   },
